<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="LabelFor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/leaf_logo"
        android:layout_width="79dp"
        android:layout_height="71dp"
        android:contentDescription="@string/leaf_logo"
        android:rotation="30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103"
        app:srcCompat="@drawable/leaf" />

    <TextView
        android:id="@+id/Tutorloo_label"
        android:layout_width="251dp"
        android:layout_height="46dp"
        android:text="@string/tutorloo"
        android:textColor="#46159C"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <ImageView
        android:id="@+id/Background"
        android:layout_width="419dp"
        android:layout_height="592dp"
        android:background="@drawable/grey_background"
        android:contentDescription="@string/app_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/Log_in"
        android:layout_width="109dp"
        android:layout_height="44dp"
        android:background="#330072"
        android:text="@string/log_in"
        android:hint="login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PurpleHeader"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/PurpleHeader"
        android:layout_width="418dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="680dp"
        android:background="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551" />

    <ImageView
        android:id="@+id/HelpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/link_to_help_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PurpleHeader"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="66dp"
        android:layout_height="29dp"
        android:background="#FFFFFF"
        android:text="@string/register"
        android:textColor="@color/purple"
        android:textSize="12sp"
        android:hint="register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PurpleHeader"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <ImageView
        android:id="@+id/LoginLogo"
        android:layout_width="180dp"
        android:layout_height="169dp"
        android:contentDescription="@string/wlu_logo"
        app:layout_constraintBottom_toBottomOf="@+id/Background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PurpleHeader"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/laurier_logo" />

    <EditText
        android:id="@+id/Email_input"
        android:layout_width="234dp"
        android:layout_height="43dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:hint="email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginLogo"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="234dp"
        android:layout_height="43dp"
        android:contentDescription="@string/login_password"
        android:hint="password"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PurpleHeader"
        app:layout_constraintVertical_bias="0.596"
        tools:text="Password"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="112dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.689"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>